--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "deploy": "next build && touch out/.nojekyll"
+    "start": "next start"
   },
   "dependencies": {
     "@types/node": "^18.11.5",
